Create index.html for project GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<link rel="stylesheet" href="M:\5thsem\wt lab\vscode\cssfile.css"> 
+<body>
+<div class="card">
+  <img src="me2.jpg" alt="Manmath" style="width:100%">
+  <h1>Manmath Sinha</h1>
+  <p class="title">ComputerVision Engineer, Team SwayamChalit Gadi, Kalinga Institute Of Industrial technology</p>
+  <p>📷 <a href="https://www.instagram.com/iam_msinha/" target="_blank" rel="noopener noreferrer">Instagram</a></p>
+  <p>🚩 <a href="https://twitter.com/manmath_sinha" target="_blank" rel="noopener noreferrer">Twitter</a></p>
+  <p>🚩 <a href="https://www.linkedin.com/in/manmath-sinha-4757491a7/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
+  <p><button onclick="document.location='form2.html'">Contact Me</button>
+  <button onclick="document.location='resume.html'">My Resume</button>
+  <button onclick="document.location='game.html'">Play Games</button></p></p>
+</div>
+</body>
+</html>
